# pagebrowse

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
crates/gtk-plugin/: Cargo.toml
crates/gtk-plugin/src/: lib.rs
crates/pagebrowse/: Cargo.toml
crates/pagebrowse/src/: lib.rs  main.rs
crates/pagebrowse_app/: Cargo.toml
crates/pagebrowse_lib/: Cargo.toml
crates/pagebrowse_lib/src/: lib.rs
crates/pagebrowse_manager/: Cargo.toml
crates/pagebrowse_manager/src/: lib.rs  main.rs  options.rs
crates/pagebrowse_types/: Cargo.toml
crates/pagebrowse_types/src/: lib.rs
src/: main.rs
