[package]
name = "pagebrowse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = { version = "0.27", default-features = false, features = ["protocol"] }
objc = "0.2.7"
cocoa = "0.24.1"
block = "0.1.6"
