[package]
name = "pagebrowse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = { version = "0.35", default-features = false, features = ["protocol"] }
tao = { version = "0.18.0", default-features = false, features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.16"
webkit2gtk = "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.1"
block = "0.1.6"
