[package]
name = "pagebrowse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagebrowse_manager = { path = "../pagebrowse_manager" }
pagebrowse_lib = { path = "../pagebrowse_lib" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
