[package]
name = "pagebrowse"
version = "0.1.0"
edition = "2021"
description = "Webview-based browser automation library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagebrowse_types = "0.1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.21"
