[package]
name = "pagebrowse_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagebrowse_manager = { path = "../pagebrowse_manager" }
tokio = { version = "1", features = ["sync", "process", "io-util"] }
thiserror = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.21"
