[package]
name = "pagebrowse_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = { version = "0.35", default-features = false, features = ["protocol"] }
tao = { version = "0.24", default-features = false, features = [
    "rwh_05", # wry crate currently pins to this non-default raw window handle crate version in their examples
    "serde",
] }
clap = { version = "4", features = ["cargo"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.21"
image = { version = "0.24.7", features = ["webp-encoder"] }

# [target.'cfg(target_os = "linux")'.dependencies]
# gtk = "0.18"
# webkit2gtk = "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
block = "0.1.6"
