[package]
name = "pagebrowse_manager"
version = "0.1.1"
edition = "2021"
description = "Standalone webview manager required to use Pagebrowse"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagebrowse_types = "0.1.0"
wry = { version = "0.39", default-features = false, features = [
    "protocol",
    "os-webview",
] }
tao = { version = "0.24", default-features = false, features = [
    "rwh_06",
    "serde",
] }
clap = { version = "4", features = ["cargo"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.21"
image = { version = "0.24.7", features = ["webp-encoder"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0"
webkit2gtk = { version = "2.0.1", features = ["v2_40"] }
javascriptcore-rs = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
block = "0.1.6"
